--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "0300a749",
    "metadata": {},
    "outputs": [
@@ -372,11 +372,10 @@
     "X, y = load_fashion_mnist()\n",
     "mask = y != 8  # Exclude bags\n",
     "X_filtered = X[mask]\n",
-    "y_filtered = y[mask]\n",
+    "y_original = y[mask]\n",
     "\n",
     "# TODO: Create binary lab\n",
-    "footwear_labels = {5, 7, 9}\n",
-    "y_binary = np.array([1 if label in footwear_labels else 0 for label in y_filtered])\n",
+    "y_binary = np.isin(y_original, [5, 7, 9]).astype(int)\n",
     "\n",
     "# TODO: Train/test split with stratification\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
