--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "479f4093",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "86699a8a",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "52e9fb38",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "f1af57fe",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "932eadee",
    "metadata": {},
    "outputs": [
@@ -351,16 +351,7 @@
       "\n",
       "Part 3: Full Model Comparison Pipeline\n",
       "----------------------------------------\n",
-      "LogisticRegression: 0.9997 (+/- 0.0001)\n",
-      "RandomForest: 1.0000 (+/- 0.0000)\n",
-      "XGBoost: 1.0000 (+/- 0.0000)\n",
-      "  LogisticRegression trained\n",
-      "  RandomForest trained\n",
-      "  XGBoost trained\n",
-      "\n",
-      "Best Model Test Performance:\n",
-      "  Accuracy: 0.9994\n",
-      "  AUC: 1.0000\n"
+      "LogisticRegression: 0.9997 (+/- 0.0001)\n"
      ]
     }
    ],
@@ -390,14 +381,15 @@
     "models = {\n",
     "    'LogisticRegression': LogisticRegression(max_iter=1000, random_state=42),\n",
     "    'RandomForest': RandomForestClassifier(n_estimators=100, random_state=42, n_jobs=-1),\n",
-    "    'XGBoost': XGBClassifier(n_estimators=100, random_state=42, verbosity=0, n_jobs=-1)\n",
+    "    'XGBoost': XGBClassifier(n_estimators=200, random_state=42, verbosity=0, n_jobs=-1, objective=\"binary:logistic\",\n",
+    "    eval_metric=\"logloss\")\n",
     "}\n",
     "\n",
     "# TODO: Run 5-fold CV for all models (use StratifiedKFold, scoring='roc_auc')\n",
     "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
     "cv_results = []\n",
     "for model_name, model in models.items():\n",
-    "    scores = cross_val_score(model, X_train_scaled, y_train, cv=cv, scoring='roc_auc', n_jobs=-1)\n",
+    "    scores = cross_val_score(model, X_train_scaled, y_train, cv=cv, scoring='roc_auc', n_jobs=1)\n",
     "    for fold, score in enumerate(scores, 1):\n",
     "        cv_results.append({\n",
     "            'model': model_name,\n",
