--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -351,7 +351,16 @@
       "\n",
       "Part 3: Full Model Comparison Pipeline\n",
       "----------------------------------------\n",
-      "LogisticRegression: 0.9997 (+/- 0.0001)\n"
+      "LogisticRegression: 0.9997 (+/- 0.0001)\n",
+      "RandomForest: 1.0000 (+/- 0.0000)\n",
+      "XGBoost: 1.0000 (+/- 0.0000)\n",
+      "  LogisticRegression trained\n",
+      "  RandomForest trained\n",
+      "  XGBoost trained\n",
+      "\n",
+      "Best Model Test Performance:\n",
+      "  Accuracy: 0.9994\n",
+      "  AUC: 1.0000\n"
      ]
     }
    ],
